<resources>
    <string name="app_name">Bluetooth Example</string>
    <string name="turn_on">Turn On</string>
    <string name="turn_off">Turn Off</string>
    <string name="discoverable">Discoverable</string>
    <string name="get_paired_devices">Get Paired Devices</string>
    <string name="paired_devices">Paired Devices:</string>
    <string name="new_devices">New Devices:</string>
    <string name="todo">TODO</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_found">No devices found</string>
</resources>
